# RuView

./: .gitignore  CHANGELOG.md
.claude/: settings.local.json
.github/workflows/: bench-regression.yml  cd.yml  ci.yml  cog-ha-matter-release.yml  desktop-release.yml  firmware-ci.yml  firmware-qemu.yml  fix-regression-guard.yml  pip-release.yml  security-scan.yml
api-docs/adr/: ADR-084-rabitq-similarity-sensor.md  ADR-156-ruvector-fusion-beyond-sota.md
benchmarks/wiflow-std/: .gitignore  RESULTS.md  eval_ort_accuracy.py  eval_repro.py  onnx_bench.py  quantize_bench.py
benchmarks/wiflow-std/remote/: eval_retrained.py
benchmarks/wiflow-std/results/: edge_optimization.json
docker/: docker-entrypoint.sh
docs/: WITNESS-LOG-110.md  user-guide.md
docs/adr/: ADR-151-room-calibration-specialist-training.md  ADR-152-wifi-pose-sota-2026-intake.md
docs/integration/: calibration-appliance-integration.md
docs/research/ruview-beyond-sota/: README.md
firmware/esp32-csi-node/components/ruv_temporal/: CMakeLists.txt  README.md
firmware/esp32-csi-node/components/ruv_temporal/src/: lib.rs
firmware/esp32-csi-node/main/: c6_timesync.c
python/: Cargo.toml
python/src/: lib.rs
scripts/: generate-witness-bundle.sh
v1/src/: app.py
v2/crates/wifi-densepose-cli/: Cargo.toml
v2/crates/wifi-densepose-cli/src/: calibrate_api.rs
v2/crates/wifi-densepose-core/src/: types.rs
v2/crates/wifi-densepose-desktop/src/commands/: server.rs
v2/crates/wifi-densepose-desktop/ui/: package-lock.json  package.json
v2/crates/wifi-densepose-hardware/src/: sync_packet.rs
v2/crates/wifi-densepose-mat/src/integration/: hardware_adapter.rs
v2/crates/wifi-densepose-mat/src/localization/: triangulation.rs
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/src/: cli.rs  engine_bridge.rs  main.rs
